--- a/app/components/profile-header/ProfileHeader.module.scss
+++ b/app/components/profile-header/ProfileHeader.module.scss
@@ -8,7 +8,6 @@
 	height: fit-content;
 	padding: 1rem;
 	position: relative;
-	border-radius: 6px;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
 	padding-top: 2rem;
